{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 97,
  "lineage": "74d007f1-5a97-a371-ac4c-479f666afd1e",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "hash-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/publicIPAddresses/hash-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.140.51.125",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "hash-ip",
            "resource_group_name": "hashicorp-rg",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hash-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/networkInterfaces/hash-nic",
            "internal_domain_name_suffix": "pcz5zvuu1hlurau5d40u3nvmah.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/publicIPAddresses/hash-ip",
                "subnet_id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/virtualNetworks/hash-vnet/subnets/hash_internal"
              }
            ],
            "location": "uksouth",
            "mac_address": "7C-1E-52-09-A9-25",
            "name": "hash-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "hashicorp-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Compute/virtualMachines/hash-vm"
          },
          "dependencies": [
            "azurerm_public_ip.hash-ip",
            "azurerm_resource_group.hash-rg",
            "azurerm_subnet.has-subnet",
            "azurerm_virtual_network.has-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hash-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/networkSecurityGroups/hash-nsg",
            "location": "uksouth",
            "name": "hash-nsg",
            "resource_group_name": "hashicorp-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Hash-NSG-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hash-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "hash-nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/networkSecurityGroups/hash-nsg/securityRules/Hash-NSG-rule",
            "name": "Hash-NSG-rule",
            "network_security_group_name": "hash-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "hashicorp-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.hash-nsg",
            "azurerm_resource_group.hash-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hash-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/publicIPAddresses/hash-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.140.51.125",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "hash-ip",
            "resource_group_name": "hashicorp-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hash-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "has-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/virtualNetworks/hash-vnet/subnets/hash_internal",
            "name": "hash_internal",
            "resource_group_name": "hashicorp-rg",
            "virtual_network_name": "hash-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hash-rg",
            "azurerm_virtual_network.has-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Hash-NSG-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/virtualNetworks/hash-vnet/subnets/hash_internal",
            "network_security_group_id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/networkSecurityGroups/hash-nsg",
            "subnet_id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/virtualNetworks/hash-vnet/subnets/hash_internal"
          },
          "dependencies": [
            "azurerm_network_security_group.hash-nsg",
            "azurerm_resource_group.hash-rg",
            "azurerm_subnet.has-subnet",
            "azurerm_virtual_network.has-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "has-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d6fcb378-d994-48d7-829f-1fb54eb6ac07",
            "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/virtualNetworks/hash-vnet",
            "location": "uksouth",
            "name": "hash-vnet",
            "resource_group_name": "hashicorp-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/virtualNetworks/hash-vnet/subnets/hash_internal",
                "name": "hash_internal",
                "security_group": "/subscriptions/a32f5afc-66b2-452e-b83b-075de734cfe3/resourceGroups/hashicorp-rg/providers/Microsoft.Network/networkSecurityGroups/hash-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hash-rg"
          ]
        }
      ]
    }
  ]
}